crates/shinyproxy/tests/snapshots/html_snapshots__auth_error_page.snap
---
source: crates/shinyproxy/tests/html_snapshots.rs
expression: "page(&instance, &client, \"/auth-error\").await"
---

<!DOCTYPE html>
<html>
    <head lang="en">
        <title>My ShinyProxy</title>
        <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
        <meta content="width=device-width, initial-scale=1" name="viewport"/>
        <script type="text/javascript">
            history.forward();
        </script>
        <link media="screen" rel="stylesheet" href="/css/bootstrap.css"/>
        <link media="screen" rel="stylesheet" href="/css/login.css"/>
        <script src="/webjars/jquery/3.7.1/jquery.min.js"></script>
        <script src="/js/bootstrap.js"></script>
    </head>
    <body>
        <div class="container">
            <h2>An error occurred during the authentication procedure.</h2>
            <p><b>If you are a user of <span>ShinyProxy</span>:</b> please report this issue to your
                administrator and try to log out from your Identity Provider.</p>
            <p><b>If you are an administrator of <span>ShinyProxy</span>:</b> this error page is
                typically shown because of an configuration error in the authentication setup. See the logs for more
                information.</p>
            <a href="/">Go back to the main page</a>
        </div>
        <style>
            h2 {
                margin-bottom: 20px;
                margin-top: 20px;
            }
        </style>
    </body>
</html>
